# bank-widget

./: .coverage  .gitignore  README.md  conftest.py  main.py  pyproject.toml  test_log.txt
src/: decorators.py  masks.py  processing.py  widget.py
src/generators/: generators.py
src/processing/: __init__.py  processing.py
tests/: test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
